<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/temperature_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4D1D1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Temperature">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/value1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:backgroundTintMode="src_in"
                    android:ems="10"
                    android:hint="@string/weight_value_1"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Spinner
                    android:id="@+id/spinner_temperature_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/value2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:backgroundTintMode="src_in"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/answer"
                    android:inputType="none"
                    android:padding="10dp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Spinner
                    android:id="@+id/spinner_temperature_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/convert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/convert" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="250dp"
                    android:layout_height="300dp"
                    app:srcCompat="@drawable/temperature_big_image" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>